updated loading screen connection

--- a/loading.html
+++ b/loading.html
@@ -34,7 +34,7 @@
 
     <script>
       setTimeout(function () {
-        window.location.href = "connected.html";
+        window.location.href = "connected2.html";
       }, 3000);
     </script>
   </body>
