--- a/connected2.html
+++ b/connected2.html
@@ -11,7 +11,7 @@
   <body>
     <div class="center">
       <span class="v160_5">Meet your new pen pal, Sharon</span>
-      <a href="index.html"
+      <a href="letter.html"
         ><div class="button">
           <div class="buttonstyle"></div>
           <span class="buttontext">Write Sharon!</span>
