--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="./css/form.css" rel="stylesheet" />
+	<link href="form.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 <body>
