added envelope screen

--- a/paperairplane.html
+++ b/paperairplane.html
@@ -149,7 +149,7 @@ S20.866,331,46.607,331h668.787C741.133,331,762,307.942,762,279.5S741.133,228,715
 
     <script>
       setTimeout(function () {
-        window.location.href = "index.html";
+        window.location.href = "profile.html";
       }, 3000);
     </script>
   </body>
