--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="form.css" rel="stylesheet" />
+	<link href="./css/form.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 <body>
@@ -17,8 +17,8 @@
 			<span> </span>
 		</div>
 		<div class = "q2"> What's your favorite way to de-stress? </div>
-		<div class = "interest">
-			<select name = "interest">
+			<div class = "interest" style="font-family:'Poppins'">
+				<select name = "interest">
 					<option value=yoga> Yoga </option>
 					<option value=meditation> Meditation </option>
 					<option value=art> Art </option>
@@ -28,7 +28,7 @@
 					<option value=read> Read </option>
 				</select> </div>
 		<div class = "submission">
-		<span class = "txt"> meet my match! <input type=submit> </span> </div> 
+		<span class = "txt"> meet my match! </span>  <input type=submit style = "text-align: center"> </div> 
 	</form>
 
 
