update to letter and screen connections

--- a/form.html
+++ b/form.html
@@ -27,8 +27,10 @@
 					<option value=zumba> Zumba</option>
 					<option value=read> Read </option>
 				</select> </div>
-		<div class = "submission">
-		<span class = "txt"> meet my match! <input type=submit> </span> </div> 
+		<a href="loading.html">
+			<div class = "submission">
+			<span class = "txt"> meet my match! <input type=submit> </span> </div> 
+		</a>
 	</form>
 
 
