--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
           </h1>
 
-          <a href="loading.html" class="button">Find my pen pal</a>
+          <a href="form.html" class="button">Find my pen pal</a>
         </div>
 
         <div class="home__social"></div>
