--- a/letter.html
+++ b/letter.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="assets/css/button.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/cursor.css" />
-    <link rel="stylesheet" href="assets/css/letter.css" />
-
-    <title>Sincerely,</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/letter.css" rel="stylesheet" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="v69_147">
-      <div class="v69_184">
-        <div class="v69_149">
-        </div><span class="v69_150">Dear Sharon,
-
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at fermentum risus. Morbi a turpis scelerisque, porta augue vel, aliquet dolor. Nam ornare ante ut auctor congue.
-
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at fermentum risus. Morbi a turpis scelerisque, porta augue vel, aliquet dolor. Nam ornare ante ut auctor congue.
-
-    Praesent eu libero ac erat aliquet egestas. Ut et lorem nulla. Vivamus ipsum urna, hendrerit pellentesque volutpat vitae, aliquam id augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-    Sincerely,
-    Nancy </span></div><div class="v69_151"><div class="v69_152"></div><div class="v69_153"></div><div class="v69_154"></div><div class="v69_155"></div><div class="v69_156"></div><div class="v69_157"></div></div><div class="v69_158"><div class="v69_159"></div><div class="v69_160"></div></div><div class="v69_161"><div class="v69_162"></div><div class="v69_163"></div></div><div class="v69_164"><div class="v69_165"></div><div class="v69_166"></div></div><div class="v69_167"><div class="v69_168"></div><div class="v69_169"></div></div></div>
-    <!--===== SCROLL REVEAL =====-->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!--===== MAIN JS =====-->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/cursor.js"></script>
+    <div class="v199_0">
+      <div class="v199_1">
+        <div class="v199_2"></div>
+        <span class="v199_3">Dear Sharon, </span>
+      </div>
+      <a href="uploadvideo.html">
+        <div class="v196_27">
+          <div class="v196_25"></div>
+          <span class="v196_26">Next >></span>
+        </div>
+      </a>
+      <span class="v199_21"
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at
+        fermentum risus. Morbi a turpis scelerisque, porta augue vel, aliquet
+        dolor. Nam ornare ante ut auctor congue. </span
+      ><span class="v199_22">
+        Praesent eu libero ac erat aliquet egestas. Ut et lorem nulla. Vivamus
+        ipsum urna, hendrerit pellentesque volutpat vitae, aliquam id augue.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
+      ><span class="v199_23">Sincerely, Nancy </span
+      ><span class="v199_24"
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at
+        fermentum risus. Morbi a turpis scelerisque, porta augue vel, aliquet
+        dolor. Nam ornare ante ut auctor congue.
+      </span>
+    </div>
   </body>
 </html>
