updated screen connections

--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-	<link href="./css/form.css" rel="stylesheet" />
+	<link href="form.css" rel="stylesheet" />
 	<title>Document</title>
 </head>
 <body>
@@ -27,8 +27,11 @@
 					<option value=zumba> Zumba</option>
 					<option value=read> Read </option>
 				</select> </div>
-		<div class = "submission">
-		<span class = "txt"> meet my match! </span>  <input type=submit style = "text-align: center"> </div> 
+		<a href="loading.html">
+			<div class = "submission">
+			<span class = "txt"> meet my match! </span>  
+			<input type=submit style = "text-align: center"> </div> 
+		</a>
 	</form>
 
 
